<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_logsgroup_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/settings_group_marginHorizontal"
        android:layout_marginVertical="@dimen/settings_group_marginVertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_logsgroup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_logsgroup_title"
            android:textSize="@dimen/settings_group_title_textsize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_logsgroup_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_logsgroup_logsenabled_option"
                android:textSize="@dimen/settings_group_option_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_logsenabled_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_uwbgroup_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/settings_group_marginHorizontal"
        android:layout_marginTop="@dimen/settings_group_marginVertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_logsgroup_frame">

        <TextView
            android:id="@+id/settings_uwbgroup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_uwbgroup_title"
            android:textSize="@dimen/settings_group_title_textsize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/settings_item_uwb_role"
            layout="@layout/settings_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_uwbgroup_title" />

        <View
            android:id="@+id/settings_separator_item_uwb_role"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_item_uwb_role" />

        <include
            android:id="@+id/settings_item_uwb_config_type"
            layout="@layout/settings_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_separator_item_uwb_role" />

        <View
            android:id="@+id/settings_separator_item_uwb_config_type"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_item_uwb_config_type" />

        <include
            android:id="@+id/settings_item_uwb_channel"
            layout="@layout/settings_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_separator_item_uwb_config_type" />

        <View
            android:id="@+id/settings_separator_item_uwb_channel"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_item_uwb_channel" />

        <include
            android:id="@+id/settings_item_uwb_preamble_index"
            layout="@layout/settings_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_separator_item_uwb_channel" />

        <View
            android:id="@+id/settings_separator_item_uwb_preamble_index"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_item_uwb_preamble_index" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>